Tela principal e de cliente

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.JTattoo-1.6.11.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.ja
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JTattoo-1.6.11.jar}
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
