--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Autopecas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\jcalendar-1.4.jar
 file.reference.JTattoo-1.6.11.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\JTattoo\\JTattoo-1.6.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JTattoo-1.6.11.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
