--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,45 @@ dist.dir=dist
 dist.jar=${dist.dir}/Autopecas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\commons-logging-1.1.jar
+file.reference.commons-report-1.8.2.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\commons-report-1.8.2.jar
+file.reference.groovy-all-1.7.5.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\groovy-all-1.7.5.jar
+file.reference.groovy-all-2.0.1.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\groovy-all-2.0.1.jar
+file.reference.itext-2.1.7.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\itext-2.1.7.jar
+file.reference.iText-2.1.7.js2.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\jasperreports-5.6.0.jar
+file.reference.jasperreports-applet-5.6.0.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\jasperreports-applet-5.6.0.jar
+file.reference.jasperreports-fonts-5.6.0.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\jasperreports-fonts-5.6.0.jar
+file.reference.jasperreports-functions-5.6.0.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\jasperreports-functions-5.6.0.jar
+file.reference.jasperreports-javaflow-5.6.0.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\jasperreports-javaflow-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\jcalendar-1.4.jar
+file.reference.joda-time-2.1.jar=C:\\Users\\User\\Downloads\\jcalendar-1.1.4.jar\\bibliotecas\\bibliotecas iReport\\joda-time-2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.commons-report-1.8.2.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.jasperreports-applet-5.6.0.jar}:\
+    ${file.reference.jasperreports-fonts-5.6.0.jar}:\
+    ${file.reference.jasperreports-functions-5.6.0.jar}:\
+    ${file.reference.jasperreports-javaflow-5.6.0.jar}:\
+    ${file.reference.joda-time-2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
